# wiregc

./: Cargo.toml  LICENSE  wiregc
.github/workflows/: rust.yml
src/: builder_basics.glade  conf.rs  exec.rs  lib.rs  main.rs  wiregc.glade
usr/share/applications/: wiregc.desktop
usr/share/polkit-1/actions/: wiregc.policy
