[package]
name = "wiregc"
version = "0.1.0"
authors = ["Kieran Moy <kfatyuip@163.com>"]
homepage = "https://github.com/kfatyuip/wiregc"
edition = "2021"

description = "wireguird gtk client"
repository = "https://github.com/kfatyuip/wiregc"
license = "MIT"

[dependencies]
gdk-pixbuf = "0.18.3"
glib = "0.18.4"
gtk = "0.18.1"
tokio = { version = "1.35.0", features = ["full"] }
